Make overlays optional (skip if src is missing).  Limit -secrets to a single file

--- a/examples/nginx/secrets.html.tmpl
+++ b/examples/nginx/secrets.html.tmpl
@@ -1,4 +1,18 @@
 <html>
+<head>
+<style>
+pre {
+    background-color: #f0f0f0;
+    width:60%;
+    margin:left 2em;
+    margin-top: .5em;
+    padding:.5em;
+}
+.secret {
+    color: #800000;
+}
+</style>
+</head>
 <body>
 <h1>Secrets</h1>
 <p>Secrets can be injected into configuration files as dockerfy initializes the container. To run this demo, we mounted the volume --volume $PWD:/secrets and then gave ran dockerfy with the
@@ -20,11 +34,11 @@ of the environment variable's value.  This could be used in an nginx.conf file l
         &#x007B;{ end }}
 </pre>
 which would evaluate to:
-<pre>
+<pre class="secret"><strong>
         {{ if .Secret.PROXY_PASSWORD }}
         proxy_set_header Authorization "Basic {{ .Secret.PROXY_PASSWORD }}";
         {{ end }}
-</pre>
+</strong></pre>
 
 <h2>Security Concerns</h2>
 <p><strong>
