Allow multiple invokations of the --secrets flag.  Support JSON format for secrets files

--- a/examples/nginx/secrets.html.tmpl
+++ b/examples/nginx/secrets.html.tmpl
@@ -16,11 +16,17 @@ pre {
 <body>
 <h1>Secrets</h1>
 <p>Secrets can be injected into configuration files as dockerfy initializes the container. To run this demo, we mounted the volume --volume $PWD:/secrets and then gave ran dockerfy with the
--secrets "/secrets/secrets.env" option.</p>
+--secrets "/secrets/secrets.env" --secrets "/secrets/secrets.json" option twice.</p>
 
 <p>The secrets.env file contains a line:</p>
 <pre>
     PROXY_PASSWORD="a2luZzppc25ha2Vk"
+</pre>
+<p>And the secrets.json file contains:</p>
+<pre>
+    {
+        "JSON_SECRET": "Jason Voorhees did it"
+    }
 </pre>
 
 Dockerfy parsed the secrets.env file, and defined .Secret.PROXY_PASSWORD in the context used to exectute all templates.
@@ -39,6 +45,8 @@ which would evaluate to:
         proxy_set_header Authorization "Basic {{ .Secret.PROXY_PASSWORD }}";
         {{ end }}
 </strong></pre>
+
+And everyone knows that  &#x007B;{ .Secret.JSON_SECRET }} means that "{{ .Secret.JSON_SECRET }}"
 
 <h2>Security Concerns</h2>
 <p><strong>
