Support multiple secrets files rename --secrets to --secrets-file rename $SECRETS_FILE to $SECRETS_FILES

--- a/test/default.conf.tmpl
+++ b/test/default.conf.tmpl
@@ -26,7 +26,7 @@ server {
 
             If the container was started, mounting the the secrets file to 
             /secrets/secrets.env and the dockerfy command command was run with 
-            the option -secrets /secrets/secrets.env, then the section below will
+            the option -secrets-files /secrets/secrets.env, then the section below will
             expand to:
 
               proxy_set_header Authorization "Basic a2luZzppc25ha2Vk";
