Fix bugs in env expansion of arguments and options Add unit test to test expansion Fix bug in --secrets-files,  allow multiple colon-separated files as an argument

--- a/test/secrets.html.tmpl
+++ b/test/secrets.html.tmpl
@@ -46,7 +46,11 @@ which would evaluate to:
         {{ end }}
 </strong></pre>
 
-And everyone knows that  &#x007B;{ .Secret.JSON_SECRET }} means that "{{ .Secret.JSON_SECRET }}"
+Multiple secrets files can be specified so we can see from secrets.json and secrets.2.json that 
+<pre>
+ &#x007B;{ .Secret.JSON_SECRET }} means that "{{ .Secret.JSON_SECRET }}" 
+and &#x007B;{ .Secret.AnotherSecret }} expands to  "{{ .Secret.AnotherSecret }}"
+</pre>
 
 <h2>Security Concerns</h2>
 <p><strong>
